fix z-index

--- a/public/assets/css/artist.css
+++ b/public/assets/css/artist.css
@@ -1,7 +1,7 @@
 div.conne-sd-row {
     position: absolute;
     width: 100%;
-    z-index: 999;
+    z-index: -99;
     top: 250px;
 }
 
@@ -111,7 +111,7 @@ div.conne-sd-ribbon-bottom-bg div div {
 div.conne-sd-ribbon-top-row {
     position: absolute;
     width: 100%;
-    z-index: 99;
+    z-index: -100;
     top: -100px;
     right: -150px;
     /* left: 625px; */
